Upgrade to Logstash 6.5.1