@@ -1,4 +1,4 @@
-FROM docker.elastic.co/logstash/logstash:6.4.1
+FROM docker.elastic.co/logstash/logstash:6.5.1
 
 # This command takes 2-5 minutes due to Maven downloading and building.
 RUN /usr/share/logstash/bin/logstash-plugin install logstash-filter-prune
@@ -10,5 +10,10 @@ RUN { \
       echo '-XX:+UnlockExperimentalVMOptions' ; \
       echo '-XX:+UseCGroupMemoryLimitForHeap' ; \
       echo '-XX:MaxRAMFraction=1' ; \
+      echo '-Djruby.compile.invokedynamic=false' ; \
+      echo '-Djruby.compile.mode=OFF'; \
+      echo '-XX:+TieredCompilation'; \
+      echo '-XX:TieredStopAtLevel=1'; \
+      echo '-Xverify:none'; \
       echo '-XshowSettings:vm' ; \
     } >> config/jvm.options
